# FrameBatch

./: .gitignore  FrameBatch.spec  README.md  pyproject.toml
.trae/skills/git-commit-convention/: SKILL.md
docs/: FFMPEG_NOTICE.md  FRAMEBATCH_DEVELOPMENT_PLAN.md  MACOS_ADAPTATION_PLAN.md  MACOS_BUILD_STEPS.md  MACOS_USER_GUIDE.md  RELEASE.md
examples/sample_media/: README.md
framebatch/: __init__.py  app.py  main.py
framebatch/config/: __init__.py  settings.py
framebatch/core/: __init__.py  models.py  naming.py  results.py  scanner.py  tasks.py  validators.py
framebatch/ffmpeg/: __init__.py  black_frame.py  cancel.py  cover.py  errors.py  locator.py  probe.py  remove_frame.py
framebatch/ui/: main_window.py  workers.py
scripts/: build_macos.sh  build_windows.ps1  使用说明.txt
tests/: test_black_frame.py  test_cover.py  test_locator.py  test_main_window.py  test_naming.py  test_probe.py  test_remove_frame.py  test_results.py  test_scanner.py  test_settings.py  test_tasks.py  test_validators.py  test_workers.py
