[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framebatch"
version = "0.1.0"
description = "Batch prepend a unified cover image to drama episode videos with FFmpeg."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
framebatch = "framebatch.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["framebatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-p",
    "no:cacheprovider",
]
